Alteração do front end para a versão funcional

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,17 +27,17 @@
                 <div class="destaques-grid">
         <section id="produtos" class="produtos">
             <div class="produto">
-                <img src="imagens/aneldiamante.webp" alt="Anel de Diamante">
+                <img src="./imagens/aneldiamante.webp" alt="Anel de Diamante">
                 <h3>Anel de Diamante</h3>
                 <p>R$ 5.000,00</p>
             </div>
             <div class="produto">
-                <img src="imagens/colaresmeralda.webp" alt="Colar de Esmeralda">
+                <img src="./imagens/colaresmeralda.webp" alt="Colar de Esmeralda">
                 <h3>Colar de Esmeralda</h3>
                 <p>R$ 7.500,00</p>
             </div>
             <div class="produto">
-                <img src="imagens/brincoouros.webp" alt="Brincos de Ouro">
+                <img src="./imagens/brincoouros.webp" alt="Brincos de Ouro">
                 <h3>Brincos de Ouro</h3>
                 <p>R$ 2.000,00</p>
             </div>
@@ -45,5 +45,12 @@
         <a href="produtos.html">
             <button class="btnmais">Mais produtos</button>     
     </main>
+    <footer class="footer">
+        <div class="footer-contact">
+            <p>NamaJoias • Joalheria de Luxo</p>
+            <p>Contato: (11) 9999-9999 • contato@namajoias.com.br</p>
+            <p>Endereço: Rua das Joias, 123 - São Paulo, SP</p>
+        </div>
+    </footer>
 </body>
 </html>
