--- a/src/main/resources/static/produtos.html
+++ b/src/main/resources/static/produtos.html
@@ -16,17 +16,17 @@
             <h2>Anéis:</h2>
             <div class="product-list">
                 <div class="product">
-                    <img src="imagens/anelderubi.webp" alt="Produto 1">
+                    <img src="./imagens/anelderubi.webp" alt="Produto 1">
                     <h3>Anel de Rubi</h3>
                     <p>Preço: R$ 5.000,00</p>
                 </div>
                 <div class="product">
-                    <img src="imagens/aneldiamante.webp" alt="Produto 2">
+                    <img src="./imagens/aneldiamante.webp" alt="Produto 2">
                     <h3>Anel de Diamante</h3>
                     <p>Preço: R$ 5.000,00</p>
                 </div>
                 <div class="product">
-                    <img src="imagens/anelzirconiaazul.webp"alt="Produto 3">
+                    <img src="./imagens/anelzirconiaazul.webp"alt="Produto 3">
                     <h3>Anel de Zircônia Azul</h3>
                     <p>Preço: R$ 2.000,00</p>
                 </div>
@@ -34,17 +34,17 @@
             <h2>Colares:</h2>
             <div class="product-list">
                 <div class="product">
-                    <img src="imagens/colaresmeralda.webp" alt="Produto 4">
+                    <img src="./imagens/colaresmeralda.webp" alt="Produto 4">
                     <h3>Colar de Esmeralda</h3>
                     <p>Preço: R$ 7.500,00</p>
                 </div>
                 <div class="product">
-                    <img src="imagens/colardiamantes.webp" alt="Produto 5">
+                    <img src="./imagens/colardiamantes.webp" alt="Produto 5">
                     <h3>Colar de Diamante</h3>
                     <p>Preço: R$ 20.500,00</p>
                 </div>
                 <div class="product">
-                    <img src="imagens/colaramarelo.webp" alt="Produto 6">
+                    <img src="./imagens/colaramarelo.webp" alt="Produto 6">
                     <h3>Colar de Citrína</h3>
                     <p>Preço: R$ 1.000,00</p>
                 </div>
@@ -52,22 +52,29 @@
             <h2>Brincos:</h2>
             <div class="product-list">
                 <div class="product">
-                    <img src="imagens/brincoouros.webp" alt="Produto 7">
+                    <img src="./imagens/brincoouros.webp" alt="Produto 7">
                     <h3>Brincos de Ouro</h3>
                     <p>Preço: R$ 2.000,00</p>
                 </div>
                 <div class="product">
-                    <img src="imagens/brincocolorido.webp" alt="Produto 8">
+                    <img src="./imagens/brincocolorido.webp" alt="Produto 8">
                     <h3>Brinco Pedras coloridas</h3>
                     <p>Preço: R$ 8.500,00</p>
                 </div>
                 <div class="product">
-                    <img src="imagens/brincoamarelinho.webp" alt="Produto 9">
+                    <img src="./imagens/brincoamarelinho.webp" alt="Produto 9">
                     <h3>Brinco de Topázio</h3>
                     <p>Preço: R$ 1.000,00</p>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer-contact">
+            <p>NamaJoias • Joalheria de Luxo</p>
+            <p>Contato: (11) 9999-9999 • contato@namajoias.com.br</p>
+            <p>Endereço: Rua das Joias, 123 - São Paulo, SP</p>
+        </div>
+    </footer>
 </body>
 </html>
