--- a/src/main/resources/static/cadastrocliente.html
+++ b/src/main/resources/static/cadastrocliente.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/cliente.css">
     <div class="container">
         <h1>Cadastro de Usuário</h1>
-        <form action="sucessocadastro.html" method="post">
+        <form id="cadastroClienteForm" action="" method="post">
             <div>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" maxlength="50" pattern="[A-Za-z\s]+" title="Apenas letras são permitidas" required>
@@ -37,6 +37,7 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+	<script src="./script/scriptCadastro.js"></script>
 </body>
 </html>
 
