--- a/src/main/resources/static/endereco.html
+++ b/src/main/resources/static/endereco.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-container">
-        <form action="submit.html" method="post">
+        <form id="cadastroEnderecoForm" action="" method="post">
             <h2>Cadastro de Endereço</h2>
             <div class="input-group">
                 <label for="cep">CEP:</label>
@@ -48,5 +48,6 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+    <script src="./script/scriptCadastroEndereco.js"></script>
 </body>
 </html>
