--- a/src/main/resources/static/cadastrocliente.html
+++ b/src/main/resources/static/cadastrocliente.html
@@ -12,7 +12,7 @@
         <form id="cadastroClienteForm" action="" method="post">
             <div>
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" maxlength="50" pattern="[A-Za-z\s]+" title="Apenas letras são permitidas" required>
+                <input type="text" id="nomeUsuario" name="nomeUsuario" maxlength="50" pattern="[A-Za-z\s]+" title="Apenas letras são permitidas" required>
             </div>
             <div>
                 <label for="senha">Senha:</label>
