--- a/src/main/resources/static/cadastrocliente.html
+++ b/src/main/resources/static/cadastrocliente.html
@@ -6,7 +6,7 @@
     <title>Cadastro de Usuário - Site de Joias</title>
 </head>
 <body>
-    <link rel="stylesheet" href="css/cliente.css">
+    <link rel="stylesheet" href="./css/cliente.css">
     <div class="container">
         <h1>Cadastro de Usuário</h1>
         <form id="cadastroClienteForm" action="" method="post">
