--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NamaJoias</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
     <header>
         <div class="logo"></div>
         <h1>ㅤㅤㅤㅤNamaJóias</h1>
         <nav>
-            <a href="cadastrocliente.html">
+            <a href="./cadastroproduto.html">
+                <button class="btn">Cadastro de Produtos</button>
+            </a>
+            <a href="./cadastrocliente.html">
                 <button class="btn">Cadastro</button>
             </a>
-            <a href="login.html">
+            <a href="./login.html">
                 <button class="btn">Login</button>
             </a>
         </nav>
@@ -42,7 +45,7 @@
                 <p>R$ 2.000,00</p>
             </div>
         </section>
-        <a href="produtos.html">
+        <a href="./produtos.html">
             <button class="btnmais">Mais produtos</button>     
     </main>
     <footer class="footer">
