--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Produtos - NamaJoias</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/cadastroproduto.css">
+    <link rel="stylesheet" href="./css/cadastroproduto.css">
 </head>
 <body>
 
@@ -81,6 +80,6 @@
         </div>
     </footer>
     
-    <script src="script.js"></script>
+    <script src="./script/scriptCadastroProduto.js"></script>
 </body>
 </html>
