--- a/src/main/resources/static/endereco.html
+++ b/src/main/resources/static/endereco.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Endereço</title>
-    <link rel="stylesheet" href="css/endereco.css">
+    <link rel="stylesheet" href="./css/endereco.css">
 </head>
 <body>
     <div class="form-container">
