--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,10 +6,10 @@
     <title>Login de Usuário - Site de Joias</title>
 </head>
 <body>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
     <div class="container">
         <h1>Login de Usuário</h1>
-        <form action="sucessologin.html" method="post">
+        <form action="./sucessologin.html" method="post">
             <div>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" maxlength="50" required>
