--- a/src/main/resources/static/endereco.html
+++ b/src/main/resources/static/endereco.html
@@ -22,7 +22,7 @@
 
             <div class="input-group">
                 <label for="numCasa">Número da Casa:</label>
-                <input type="text" id="numCasa" name="numCasa" maxlength="10" required>
+                <input type="text" id="numero" name="numero" maxlength="10" required>
             </div>
 
             <div class="input-group">
@@ -32,7 +32,7 @@
 
             <div class="input-group">
                 <label for="estado">Estado:</label>
-                <input type="text" id="estado" name="estado" maxlength="50" required>
+                <input type="text" id="UF" name="UF" maxlength="2" required>
             </div>
 
             <div class="input-group">
