sucesso cadastro arrumado

--- a/src/main/resources/static/sucessocadastro.html
+++ b/src/main/resources/static/sucessocadastro.html
@@ -10,7 +10,7 @@
     <form action="#" method="post">
 
     <h1>
-        O seu cadástro foi enviado com sucesso!
+        O seu cadastro foi enviado com sucesso!
     </h1>
     </form>
 
