--- a/src/main/resources/static/endereco.html
+++ b/src/main/resources/static/endereco.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="input-group">
-                <label for="estado">Estado:</label>
+                <label for="estado">Estado (UF):</label>
                 <input type="text" id="UF" name="UF" maxlength="2" required>
             </div>
 
