--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -16,7 +16,7 @@
 
     <div class="form-container">
         <h1 class="form-title">Cadastro de Novo Produto</h1>
-        <form action="#" method="post" enctype="multipart/form-data" id="productForm">
+        <form action="#" method="post" enctype="multipart/form-data" id="cadastroProduto">
             <div class="form-group">
                 <label for="nome-produto" class="form-label">Nome do Produto</label>
                 <input type="text" id="nome-produto" name="nome-produto" class="form-input" required>
