tentei corrigir pt2

--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -10,7 +10,7 @@
 
     <header class="header">
         <div class="logo">NamaJoias</div>
-        <p class="header-subtitle">Joalheria de Luxo</p>
+        <p class="header-subtitle">Joalheria de Luxo!</p>
         <a href="index.html" class="home-btn">Home</a>
     </header>
 
