--- a/src/main/resources/static/endereco.html
+++ b/src/main/resources/static/endereco.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-container">
-        <form id="cadastroEnderecoForm" action="" method="post">
+        <form id="cadastroEnderecoForm" >
             <h2>Cadastro de Endereço</h2>
 
             <div class="input-group">
