--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -25,6 +25,7 @@
             <button type="submit">Entrar</button>
         </form>
     </div>
+	<script src="./script/scriptlogin.js"></script>
 </body>
 </html>
 
