alterações no banco de dados e adicionei os ids certo no produto

--- a/src/main/resources/static/produtos.html
+++ b/src/main/resources/static/produtos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,60 +15,81 @@
         <section class="products">
             <h2>Anéis:</h2>
             <div class="product-list">
-                <div class="product">
-                    <img src="./imagens/anelderubi.webp" alt="Produto 1">
-                    <h3>Anel de Rubi</h3>
-                    <p>Preço: R$ 5.000,00</p>
+               <div class="product">
+                    <a href="detalhes-produto.html?id=1">
+                        <img src="./imagens/anelderubi.webp" alt="Anel de Rubi">
+                        <h3>Anel de Rubi</h3>
+                        <p>Preço: R$ 5.000,00</p>
+                    </a>
                 </div>
                 <div class="product">
-                    <img src="./imagens/aneldiamante.webp" alt="Produto 2">
-                    <h3>Anel de Diamante</h3>
-                    <p>Preço: R$ 5.000,00</p>
+                    <a href="detalhes-produto.html?id=2">
+                        <img src="./imagens/aneldiamante.webp" alt="Anel de Diamante">
+                        <h3>Anel de Diamante</h3>
+                        <p>Preço: R$ 5.000,00</p>
+                    </a>
                 </div>
                 <div class="product">
-                    <img src="./imagens/anelzirconiaazul.webp"alt="Produto 3">
-                    <h3>Anel de Zircônia Azul</h3>
-                    <p>Preço: R$ 2.000,00</p>
+                    <a href="detalhes-produto.html?id=3">
+                        <img src="./imagens/anelzirconiaazul.webp" alt="Anel de Zircônia Azul">
+                        <h3>Anel de Zircônia Azul</h3>
+                        <p>Preço: R$ 2.000,00</p>
+                    </a>
                 </div>
             </div>
+
             <h2>Colares:</h2>
             <div class="product-list">
                 <div class="product">
-                    <img src="./imagens/colaresmeralda.webp" alt="Produto 4">
-                    <h3>Colar de Esmeralda</h3>
-                    <p>Preço: R$ 7.500,00</p>
+                    <a href="detalhes-produto.html?id=4">
+                        <img src="./imagens/colaresmeralda.webp" alt="Colar de Esmeralda">
+                        <h3>Colar de Esmeralda</h3>
+                        <p>Preço: R$ 7.500,00</p>
+                    </a>
                 </div>
                 <div class="product">
-                    <img src="./imagens/colardiamantes.webp" alt="Produto 5">
-                    <h3>Colar de Diamante</h3>
-                    <p>Preço: R$ 20.500,00</p>
+                    <a href="detalhes-produto.html?id=5">
+                        <img src="./imagens/colardiamantes.webp" alt="Colar de Diamante">
+                        <h3>Colar de Diamante</h3>
+                        <p>Preço: R$ 20.500,00</p>
+                    </a>
                 </div>
                 <div class="product">
-                    <img src="./imagens/colaramarelo.webp" alt="Produto 6">
-                    <h3>Colar de Citrína</h3>
-                    <p>Preço: R$ 1.000,00</p>
+                    <a href="detalhes-produto.html?id=6">
+                        <img src="./imagens/colaramarelo.webp" alt="Colar de Citrína">
+                        <h3>Colar de Citrína</h3>
+                        <p>Preço: R$ 1.000,00</p>
+                    </a>
                 </div>
             </div>
+
             <h2>Brincos:</h2>
             <div class="product-list">
                 <div class="product">
-                    <img src="./imagens/brincoouros.webp" alt="Produto 7">
-                    <h3>Brincos de Ouro</h3>
-                    <p>Preço: R$ 2.000,00</p>
+                    <a href="detalhes-produto.html?id=7">
+                        <img src="./imagens/brincoouros.webp" alt="Brincos de Ouro">
+                        <h3>Brincos de Ouro</h3>
+                        <p>Preço: R$ 2.000,00</p>
+                    </a>
                 </div>
                 <div class="product">
-                    <img src="./imagens/brincocolorido.webp" alt="Produto 8">
-                    <h3>Brinco Pedras coloridas</h3>
-                    <p>Preço: R$ 8.500,00</p>
+                    <a href="detalhes-produto.html?id=8">
+                        <img src="./imagens/brincocolorido.webp" alt="Brinco Pedras Coloridas">
+                        <h3>Brinco Pedras Coloridas</h3>
+                        <p>Preço: R$ 8.500,00</p>
+                    </a>
                 </div>
                 <div class="product">
-                    <img src="./imagens/brincoamarelinho.webp" alt="Produto 9">
-                    <h3>Brinco de Topázio</h3>
-                    <p>Preço: R$ 1.000,00</p>
+                    <a href="detalhes-produto.html?id=9">
+                        <img src="./imagens/brincoamarelinho.webp" alt="Brinco de Topázio">
+                        <h3>Brinco de Topázio</h3>
+                        <p>Preço: R$ 1.000,00</p>
+                    </a>
                 </div>
             </div>
         </section>
     </main>
+
     <footer class="footer">
         <div class="footer-contact">
             <p>NamaJoias • Joalheria de Luxo</p>
