--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/login.css">
     <div class="container">
         <h1>Login de Usuário</h1>
-        <form action="sucessologin.html" method="post">
+        <form id="loginForm" method="post">
             <div>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" maxlength="50" required>
