--- a/src/main/resources/static/perfilusuario.html
+++ b/src/main/resources/static/perfilusuario.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Perfil do Usuário</title>
-	<link rel="stylesheet" href="perfilusuario.css">
+	<link rel="stylesheet" href="./css/perfilusuario.css">
 </head>
 
 <body>
