Arquivos fora da pasta excluidos

--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -18,8 +18,8 @@
         <h1 class="form-title">Cadastro de Novo Produto</h1>
         <form action="#" method="post" enctype="multipart/form-data" id="cadastroProduto">
             <div class="form-group">
-                <label for="nomeProduto" class="form-label">Nome do Produto</label>
-                <input type="text" id="nomeProduto" name="nome-produto" class="form-input" required>
+                <label for="nome-produto" class="form-label">Nome do Produto</label>
+                <input type="text" id="nomeProduto" name="nomeProduto" class="form-input" required>
             </div>
 
             <div class="form-group">
@@ -56,8 +56,8 @@
             </div>
 
             <div class="form-group">
-                <label for="imgUrl" class="form-label">Imagem do Produto</label>
-                <input type="file" id="imgUrl" name="imgUrl" class="form-input" accept="image/*" required>
+                <label for="imagem-produto" class="form-label">Imagem do Produto</label>
+                <input type="file" id="imagem-produto" name="imagem-produto" class="form-input" accept="image/*" required>
             </div>
 
             <button type="submit" class="submit-btn">Cadastrar Produto</button>
