--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -56,8 +56,8 @@
             </div>
 
             <div class="form-group">
-                <label for="imagem-produto" class="form-label">Imagem do Produto</label>
-                <input type="file" id="imagem-produto" name="imagem-produto" class="form-input" accept="image/*" required>
+                <label for="imgUrl" class="form-label">Imagem do Produto</label>
+                <input type="file" id="imgUrl" name="imgUrl" class="form-input" accept="image/*" required>
             </div>
 
             <button type="submit" class="submit-btn">Cadastrar Produto</button>
