--- a/src/main/resources/static/detalhes-produto.html
+++ b/src/main/resources/static/detalhes-produto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Produto</title>
-    <link rel="stylesheet" href="detalhes-produto.css">
+    <link rel="stylesheet" href="css/detalhes-produto.css">
 </head>
 <body>
     <div class="produto-detalhes">
@@ -19,5 +19,6 @@
             <button class="btn-comprar">Comprar Agora</button>
         </div>
     </div>
+	<script src="./script/produto.js"></script>
 </body>
 </html>
