Correção final dos erros de cadastro produto

--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -57,7 +57,7 @@
 
             <div class="form-group">
                 <label for="imgUrl" class="form-label">Imagem do Produto</label>
-                <input type="file" id="imgUrl" name="imgUrl" class="form-input" accept="image/*" required>
+                <input type="text" id="imgUrl" name="imgUrl" class="form-input" required>
             </div>
 
             <button type="submit" class="submit-btn">Cadastrar Produto</button>
