--- a/src/main/resources/static/detalhes-produto.html
+++ b/src/main/resources/static/detalhes-produto.html
@@ -16,7 +16,7 @@
             <p class="preco" id="produto-preco"></p>
             <p class="descricao" id="produto-descricao">
             </p>
-            <button class="btn-comprar">Comprar Agora</button>
+            <button class="btn-comprar">Encomendar</button>
         </div>
     </div>
 	<script src="./script/produto.js"></script>
