--- a/src/main/resources/static/cadastroproduto.html
+++ b/src/main/resources/static/cadastroproduto.html
@@ -36,13 +36,12 @@
                 <label for="material" class="form-label">Material</label>
                 <select id="material" name="material" class="form-select" required>
                     <option value="">Selecione o Material</option>
-                    <option value="ouro">Ouro</option>
-                    <option value="prata">Prata</option>
-                    <option value="platina">Platina</option>
+                    <option value="2">Ouro</option>
+                    <option value="1">Prata</option>
+                    <option value="3">Platina</option>
                     <option value="outro">Outro</option>
                 </select>
             </div>
-
             <div class="form-group">
                 <label for="categoria" class="form-label">Categoria</label>
                 <select id="categoria" name="categoria" class="form-select" required>
